@@ -1,13 +1,0 @@
-<?php
-/**
- * @package    contactus
- * @copyright  Copyright (c)2013-2021 Nicholas K. Dionysopoulos / Akeeba Ltd
- * @license    GNU General Public License version 3 or later
- */
-
-namespace Akeeba\ContactUs\Admin\View\Keys;
-
-class Html extends \FOF40\View\DataView\Html
-{
-
-}
