@@ -65,21 +65,9 @@ CREATE TABLE IF NOT EXISTS `#__contactus_items` (
         </action>
 
         <action table="#__contactus_keys" canfail="0">
-            <condition type="missing" value=""/>
+            <condition type="missing" value="" operator="not"/>
             <query><![CDATA[
-CREATE TABLE IF NOT EXISTS `#__contactus_keys` (
-  `contactus_key_id` bigint(20) unsigned NOT NULL AUTO_INCREMENT,
-  `email` varchar(255) NOT NULL,
-  `pubkey` MEDIUMTEXT NOT NULL,
-  `enabled` tinyint(3) NOT NULL DEFAULT 1,
-  `created_on` datetime NULL DEFAULT NULL,
-  `created_by` bigint(20) NOT NULL DEFAULT '0',
-  `modified_on` datetime NULL DEFAULT NULL,
-  `modified_by` bigint(20) NOT NULL DEFAULT '0',
-  `locked_on` datetime NULL DEFAULT NULL,
-  `locked_by` bigint(20) NOT NULL DEFAULT '0',
-  PRIMARY KEY (`contactus_key_id`)
-) ENGINE=InnoDB DEFAULT COLLATE=utf8_general_ci;
+DROP TABLE IF EXISTS `#__contactus_keys`;
             ]]></query>
         </action>
 
@@ -144,36 +132,6 @@ CREATE TABLE IF NOT EXISTS `#__contactus_keys` (
       ]]></query>
         </action>
 
-        <action table="#__contactus_keys" canfail="1">
-            <condition type="nullable" value="created_on" operator="not"/>
-            <query><![CDATA[
-      ALTER TABLE `#__contactus_keys` MODIFY `created_on` DATETIME NULL DEFAULT NULL;
-      ]]></query>
-            <query><![CDATA[
-      UPDATE `#__contactus_keys` SET `created_on` = NULL WHERE `created_on` = '0000-00-00 00:00:00';
-      ]]></query>
-        </action>
-
-        <action table="#__contactus_keys" canfail="1">
-            <condition type="nullable" value="modified_on" operator="not"/>
-            <query><![CDATA[
-      ALTER TABLE `#__contactus_keys` MODIFY `modified_on` DATETIME NULL DEFAULT NULL;
-      ]]></query>
-            <query><![CDATA[
-      UPDATE `#__contactus_keys` SET `modified_on` = NULL WHERE `modified_on` = '0000-00-00 00:00:00';
-      ]]></query>
-        </action>
-
-        <action table="#__contactus_keys" canfail="1">
-            <condition type="nullable" value="locked_on" operator="not"/>
-            <query><![CDATA[
-      ALTER TABLE `#__contactus_keys` MODIFY `locked_on` DATETIME NULL DEFAULT NULL;
-      ]]></query>
-            <query><![CDATA[
-      UPDATE `#__contactus_keys` SET `locked_on` = NULL WHERE `locked_on` = '0000-00-00 00:00:00';
-      ]]></query>
-        </action>
-
         <!-- Convert tables to InnoDB -->
         <action table="#__contactus_categories" canfail="1">
             <condition type="equals" operator="not" value="1"><![CDATA[
@@ -190,15 +148,6 @@ SELECT COUNT(*) FROM `INFORMATION_SCHEMA`.`TABLES` WHERE (`TABLE_NAME` = '#__con
             ]]></condition>
             <query><![CDATA[
 ALTER TABLE `#__contactus_items` ENGINE InnoDB;
-            ]]></query>
-        </action>
-
-        <action table="#__contactus_keys" canfail="1">
-            <condition type="equals" operator="not" value="1"><![CDATA[
-SELECT COUNT(*) FROM `INFORMATION_SCHEMA`.`TABLES` WHERE (`TABLE_NAME` = '#__contactus_keys') AND (`TABLE_SCHEMA` = DATABASE()) AND (`ENGINE` = 'InnoDB');
-            ]]></condition>
-            <query><![CDATA[
-ALTER TABLE `#__contactus_keys` ENGINE InnoDB;
             ]]></query>
         </action>
 
