@@ -1,17 +1,0 @@
-<?php
-/**
- * @package    contactus
- * @copyright  Copyright (c)2013-2021 Nicholas K. Dionysopoulos / Akeeba Ltd
- * @license    GNU General Public License version 3 or later
- */
-
-namespace Akeeba\ContactUs\Site\Model;
-
-defined('_JEXEC') or die;
-
-use FOF40\Model\DataModel;
-
-class Keys extends DataModel
-{
-
-}
