@@ -108,23 +108,3 @@ COM_CONTACTUS_ITEMS_FIELD_CREATED_ON="Sent on"
 COM_CONTACTUS_LBL_ITEMS_SAVED="Your message has been sent"
 COM_CONTACTUS_LBL_ITEM_SAVED="Your message has been sent"
 COM_CONTACTUS_CONFIRM_DELETE="Are you sure you want to delete this contact item?"
-
-; ------------------------------------------------------------------------------
-; GPG Keys
-; ------------------------------------------------------------------------------
-; Page titles
-COM_CONTACTUS_TITLE_KEYS="GPG Keys"
-COM_CONTACTUS_TITLE_KEYS_EDIT="Edit a GPG Key"
-
-; Headers
-COM_CONTACTUS_KEYS_GROUP_BASIC="Basic information"
-
-; Field names
-COM_CONTACTUS_KEY_FIELD_ID="ID"
-COM_CONTACTUS_KEY_FIELD_EMAIL="Email"
-COM_CONTACTUS_KEY_FIELD_PUBKEY="Public GPG Key"
-
-; Messages
-COM_CONTACTUS_KEY_ERR_EMAIL_EMPTY="You need to enter an email address for this GPG key."
-COM_CONTACTUS_KEY_ERR_PUBKEY_EMPTY="You need to enter your Public GPG Key."
-COM_CONTACTUS_LBL_KEY_SAVED="The Public GPG Key has been saved."
