@@ -10,12 +10,8 @@
 			"role": "Lead Developer"
 		}
 	],
-	"config": {
-		"vendor-dir": "component/backend/vendor"
-	},
 	"require": {
-		"php": "^7.1",
-		"ext-json": "*",
-		"singpolyma/openpgp-php": "^0.4.0"
+		"php": ">=7.2 <8.1",
+		"ext-json": "*"
 	}
 }
