@@ -1,6 +1,7 @@
 <?php die() ?>
 Contact Us 3.0.1
 ================================================================================
+- GPG support (incompatible with PHP 8.0)
 ~ Converted all tables to InnoDB for better performance
 
 Contact Us 3.0.0
